--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,16 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: TerraformInstaller@0
+  inputs:
+    terraformVersion: '0.12.3'
+- task: TerraformTaskV1@0
+  inputs:
+    provider: 'azurerm'
+    command: 'init'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging'
+    backendServiceArm:  'some service connection'
+    backendAzureRmResourceGroupName: 'asdf'
+    backendAzureRmStorageAccountName: 'asdf'
+    backendAzureRmContainerName: 'asdf'
+    backendAzureRmKey: 'asdf'
