--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,10 @@ steps:
       az storage account create --name $(TerraformBackend.StorageAccount) --resource-group $(TerraformBackend.ResourceGroup) --location eastus --sku Standard_LRS
       
       az storage container create --name terraform --account-name $(TerraformBackend.StorageAccount)
+
+      az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value"
+
+      echo "##vso[task.setvariable variable=TerraformBackend.StorageAccountKey]"
 - task: TerraformInstaller@0
   inputs:
     terraformVersion: '0.12.3'
