--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,9 +28,9 @@ steps:
       
       az storage container create --name terraform --account-name $(TerraformBackend.StorageAccount)
 
-      az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value"
+      STORAGE_ACCOUNT_KEY = $(az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value")
 
-      echo "##vso[task.setvariable variable=TerraformBackend.StorageAccountKey]"
+      echo "##vso[task.setvariable variable='TerraformBackend.StorageAccountKey']$STORAGE_ACCOUNT_KEY"
 - task: TerraformInstaller@0
   inputs:
     terraformVersion: '0.12.3'
