--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,9 @@ steps:
     backendAzureRmStorageAccountName: $(TerraformBackend.StorageAccount)
     backendAzureRmContainerName: 'realworld'
     backendAzureRmKey: $(TerraformBackend.StorageAccountKey)
+- task: HelmInstaller@1
+  inputs:
+    helmVersionToInstall: 'latest'
 - task: TerraformTaskV1@0
   inputs:
     provider: 'azurerm'
