Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,6 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'apply'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
     commandOptions: '-key=value -key2=value'
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
