--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,3 +54,4 @@ steps:
     command: 'apply'
     workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
+    commandOptions: -var "servicePrincipal='{ client_id = $(KubernetesServicePrincipal.ClientId), client_secret = $(KubernetesServicePrincipal.ClientSecret) }'"
