Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,4 +54,4 @@ steps:
     command: 'apply'
     workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
-    commandOptions: -var "servicePrincipal='{ client_id = $(KubernetesServicePrincipal.ClientId), client_secret = $(KubernetesServicePrincipal.ClientSecret) }'"
+    commandOptions: -var "service_principal='{ client_id = $(KubernetesServicePrincipal.ClientId), client_secret = $(KubernetesServicePrincipal.ClientSecret) }'"
