--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,5 +55,5 @@ steps:
     workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
     commandOptions: |
-      -var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)"
+      -var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)" \
       -var "aks_service_principal_client_secret=$(KubernetesServicePrincipal.ClientSecret)"
