--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
       echo "##vso[task.setvariable variable='TerraformBackend.StorageAccountKey']$STORAGE_ACCOUNT_KEY"
 - task: TerraformInstaller@0
   inputs:
-    terraformVersion: '0.12.3'
+    terraformVersion: 'latest'
 - task: TerraformTaskV1@0
   displayName: "Terraform Init"
   inputs:
