--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,19 +50,22 @@ steps:
   inputs:
     helmVersionToInstall: 'latest'
 - task: TerraformTaskV1@0
-  displayName: "Terraform Plan"
-  inputs:
-    provider: 'azurerm'
-    command: 'plan'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
-    environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
-    commandOptions: '-var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)" -var "aks_service_principal_client_secret=$(KubernetesServicePrincipal.ClientSecret)"'
-- task: TerraformTaskV1@0
-  displayName: "Terraform Apply"
+  displayName: "Terraform Apply Cluster Module"
   inputs:
     provider: 'azurerm'
     command: 'apply'
     workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
     commandOptions: |
+      -target=module.cluster
+      -var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)" -var "aks_service_principal_client_secret=$(KubernetesServicePrincipal.ClientSecret)"
+- task: TerraformTaskV1@0
+  displayName: "Terraform Apply Cluster GitOps"
+  inputs:
+    provider: 'azurerm'
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging/'
+    environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
+    commandOptions: |
+      -target=module.gitops
       -var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)" -var "aks_service_principal_client_secret=$(KubernetesServicePrincipal.ClientSecret)"
