--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,9 @@ steps:
 - task: TerraformInstaller@0
   inputs:
     terraformVersion: '0.12.20'
+- task: HelmInstaller@1
+  inputs:
+    helmVersionToInstall: 'latest'
 - task: TerraformTaskV1@0
   displayName: "Terraform Init"
   inputs:
@@ -43,12 +46,9 @@ steps:
     backendServiceArm: 'nebbia-partner-service-connection'
     backendAzureRmResourceGroupName: $(TerraformBackend.ResourceGroup)
     backendAzureRmStorageAccountName: $(TerraformBackend.StorageAccount)
-    backendAzureRmContainerName: 'realworld'
+    backendAzureRmContainerName: 'realworld-cluster'
     backendAzureRmKey: $(TerraformBackend.StorageAccountKey)
     workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging'
-- task: HelmInstaller@1
-  inputs:
-    helmVersionToInstall: 'latest'
 - task: TerraformTaskV1@0
   displayName: "Terraform Apply Cluster Module"
   inputs:
