--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
       STORAGE_ACCOUNT_KEY=$(az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value")
 
       echo "setting storage account key variable"
-      echo "##vso[task.setvariable variable='TerraformBackend.StorageAccountKey']$STORAGE_ACCOUNT_KEY"
+      echo "##vso[task.setvariable variable=TerraformBackend.StorageAccountKey]$STORAGE_ACCOUNT_KEY"
 
       az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value"
 
