--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
       
       az storage container create --name terraform --account-name $(TerraformBackend.StorageAccount)
 
-      STORAGE_ACCOUNT_KEY=$(az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value")
+      STORAGE_ACCOUNT_KEY=$(az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value" -r)
 
       echo "setting storage account key variable"
       echo "##vso[task.setvariable variable=ARM_ACCESS_KEY]$STORAGE_ACCOUNT_KEY"
