--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
       
       az storage account create --name $(TerraformBackend.StorageAccount) --resource-group $(TerraformBackend.ResourceGroup) --location eastus --sku Standard_LRS
       
-      az storage container create --name terraform --account-name $(TerraformBackend.StorageAccount)
+      az storage container create --name staging --account-name $(TerraformBackend.StorageAccount)
 
       STORAGE_ACCOUNT_KEY=$(az storage account keys list -g $(TerraformBackend.ResourceGroup) -n $(TerraformBackend.StorageAccount) | jq ".[0].value" -r)
 
@@ -47,7 +47,7 @@ steps:
     backendServiceArm: 'nebbia-partner-service-connection'
     backendAzureRmResourceGroupName: $(TerraformBackend.ResourceGroup)
     backendAzureRmStorageAccountName: $(TerraformBackend.StorageAccount)
-    backendAzureRmContainerName: 'terraform'
+    backendAzureRmContainerName: 'staging'
     backendAzureRmKey: 'realworld/cluster.tfstate'
     workingDirectory: '$(System.DefaultWorkingDirectory)/iac/staging'
     commandOptions: |
