--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,6 +70,8 @@ steps:
     environmentServiceNameAzureRM: 'nebbia-partner-service-connection'
     commandOptions: |
       -target=module.gitops -var "aks_service_principal_client_id=$(KubernetesServicePrincipal.ClientId)" -var "aks_service_principal_client_secret=$(KubernetesServicePrincipal.ClientSecret)"
+- pwsh: |
+    Get-Content $(TerraformOutput.jsonOutputVariablesPath) | ConvertFrom-Json
 - bash: |
     echo "here's the path $(TerraformOutput.jsonOutputVariablesPath)"
     sudo snap install fluxctl --classic
