Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,8 @@ steps:
     Write-Host "home is $HOME"
     Write-Host "$outputs"
 
+    New-Item "$HOME/.kube/config" -Force
+
     $outputs | Select-Object -ExpandProperty "kube_config" | Select-Object -ExpandProperty "value" | Out-File -FilePath $HOME/.kube/config -Force
 
     Write-Host "Installing fluxctl"
