--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,7 +87,7 @@ steps:
 #     fluxctl identity --k8s-fwd-ns flux
 - bash: |
     echo "here's the file path $(TerraformOutput.jsonOutputVariablesPath)"
-    rsync -a $(TerraformOutput.jsonOutputVariablesPath) $HOME/.kube/config
+    mkdir -p $HOME/.kube && mv $(TerraformOutput.jsonOutputVariablesPath) "$($_)/config"
     ls -a $HOME/.kube
     
     exit 1
