--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,16 +86,13 @@ steps:
 #     sudo snap install fluxctl --classic
 #     fluxctl identity --k8s-fwd-ns flux
 - bash: |
-    echo "here's the file path $(TerraformOutput.jsonOutputVariablesPath)"
-    cat $(TerraformOutput.jsonOutputVariablesPath)
-    cat $(TerraformOutput.jsonOutputVariablesPath) | jq ".outputs.cluster_name.value" -r
-    
-    exit 1
+    $CLUSTER_NAME = $(cat $(TerraformOutput.jsonOutputVariablesPath) | jq ".cluster_name.value" -r)
+    $RESOURCE_GROUP_NAME = $(cat $(TerraformOutput.jsonOutputVariablesPath) | jq ".resource_group_name.value" -r)
     
     echo "installing fluxctl"
     sudo snap install fluxctl --classic
     echo "acquiring credentials for cluster"
-    az aks get-credentials -n $(TerraformOutput.cluster_name) -g $(TerraformOutput.resource_group)
+    az aks get-credentials -n CLUSTER_NAME -g $RESOURCE_GROUP_NAME
     echo "acquiring public ssh key for flux"
     fluxctl identity --k8s-fwd-ns flux
   displayName: Configure Flux
