--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,7 @@ steps:
     echo "installing fluxctl"
     sudo snap install fluxctl --classic
     echo "acquiring credentials for cluster"
-    az aks get-credentials -n CLUSTER_NAME -g $RESOURCE_GROUP_NAME
+    az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
     echo "acquiring public ssh key for flux"
     fluxctl identity --k8s-fwd-ns flux
   displayName: Configure Flux
