--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,14 +85,30 @@ steps:
 #     Write-Host "Installing fluxctl"
 #     sudo snap install fluxctl --classic
 #     fluxctl identity --k8s-fwd-ns flux
-- bash: |
-    CLUSTER_NAME=$(cat $(TerraformOutput.jsonOutputVariablesPath) | jq '.cluster_name.value' -r)
-    RESOURCE_GROUP_NAME=$(cat $(TerraformOutput.jsonOutputVariablesPath) | jq '.resource_group_name.value' -r)
+- task: AzureCLI@2
+  displayName: Install Fluxctl
+  inputs:
+    azureSubscription: 'nebbia-partner-service-connection'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      CLUSTER_NAME=$(cat $(TerraformOutput.jsonOutputVariablesPath) | jq '.cluster_name.value' -r)
+      RESOURCE_GROUP_NAME=$(cat $(TerraformOutput.jsonOutputVariablesPath) | jq '.resource_group_name.value' -r)
+      
+      echo "installing fluxctl"
+      sudo snap install fluxctl --classic
+      echo "acquiring credentials for cluster"
+      az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
+      echo "acquiring public ssh key for flux"
+      fluxctl identity --k8s-fwd-ns flux
+# - bash: |
+#     CLUSTER_NAME=$(cat $(TerraformOutput.jsonOutputVariablesPath) | jq '.cluster_name.value' -r)
+#     RESOURCE_GROUP_NAME=$(cat $(TerraformOutput.jsonOutputVariablesPath) | jq '.resource_group_name.value' -r)
     
-    echo "installing fluxctl"
-    sudo snap install fluxctl --classic
-    echo "acquiring credentials for cluster"
-    az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
-    echo "acquiring public ssh key for flux"
-    fluxctl identity --k8s-fwd-ns flux
-  displayName: Configure Flux
+#     echo "installing fluxctl"
+#     sudo snap install fluxctl --classic
+#     echo "acquiring credentials for cluster"
+#     az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
+#     echo "acquiring public ssh key for flux"
+#     fluxctl identity --k8s-fwd-ns flux
+#   displayName: Configure Flux
