--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,4 +85,5 @@ steps:
       echo "acquiring credentials for cluster"
       az aks get-credentials -n $CLUSTER_NAME -g $RESOURCE_GROUP_NAME
       echo "acquiring public ssh key for flux"
-      echo $(fluxctl identity --k8s-fwd-ns flux)
+      IDENTITY=$(fluxctl identity --k8s-fwd-ns flux)
+      echo "identity is $IDENTITY"
