--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -106,7 +106,7 @@ steps:
       
       echo "acquiring public ssh key for flux"
       STAGING_SSH_PUBLIC_KEY=$(fluxctl identity --k8s-fwd-ns flux)
-      echo "##vso[task.setvariable variable='STAGING_FLUX_SSHPUBLICKEY';issecret=true]$STAGING_SSH_PUBLIC_KEY"
+      echo "##vso[task.setvariable variable=STAGING_FLUX_SSHPUBLICKEY]$STAGING_SSH_PUBLIC_KEY"
 - task: TerraformTaskV1@0
   displayName: "Terraform Init - Global"
   inputs:
